fix register feature